objects/NGCC_Mapping_Object__c.object
<CustomObject>
    <fields>
        <fullName>Alias_Country_Email_Id__c</fullName>
        <label>Alias/Country Email Id</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Cisco_Contact_Center_Manager1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cisco Contact Center Manager1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NGCC_Mapping_Objects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cisco_Contact_Center_Manager2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cisco Contact Center Manager2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NGCC_Mapping_Objects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Inactive_Queue_Name__c</fullName>
        <label>Inactive Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LDR_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LDR User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NGCC_Mapping_Objects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Language__c</fullName>
        <label>Language</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chinese (Simplified): zh_CN</fullName>
                </value>
                <value>
                    <fullName>Danish: da</fullName>
                </value>
                <value>
                    <fullName>Dutch: nl_NL</fullName>
                </value>
                <value>
                    <fullName>English: en_US</fullName>
                </value>
                <value>
                    <fullName>Finnish: fi</fullName>
                </value>
                <value>
                    <fullName>French: fr</fullName>
                </value>
                <value>
                    <fullName>German: de</fullName>
                </value>
                <value>
                    <fullName>Italian: it</fullName>
                </value>
                <value>
                    <fullName>Japanese: ja</fullName>
                </value>
                <value>
                    <fullName>Korean: ko</fullName>
                </value>
                <value>
                    <fullName>Portuguese (Brazil): pt_BR</fullName>
                </value>
                <value>
                    <fullName>Russian: ru</fullName>
                </value>
                <value>
                    <fullName>Spanish: es</fullName>
                </value>
                <value>
                    <fullName>Thai: th</fullName>
                </value>
                <value>
                    <fullName>Polish: pl</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lead_Admin_Email__c</fullName>
        <label>Lead Admin Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lead_Admin__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lead Admin</label>
        <referenceTo>User</referenceTo>
        <relationshipName>NGCC_Mapping_Objects3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MCP_Enabled__c</fullName>
        <defaultValue>false</defaultValue>
        <description>MCP Phase1: To track countries enabled for MCP Eloqua Enabled</description>
        <label>MCP Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sub_Theater__c</fullName>
        <label>Sub Theater</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Theater__c</fullName>
        <label>Theater</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>APJ</fullName>
                </value>
                <value>
                    <fullName>EMEAR</fullName>
                </value>
                <value>
                    <fullName>Greater China</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unassigned_Queue_Name__c</fullName>
        <description>The name of the unassigned Queue that can be used for this country. For use with Prospect auto-assignment. When a Prospect cannot be matched to an assignment rule, it will be assigned to the unassigned queue for the corresponding country based on this field.</description>
        <label>Unassigned Queue Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CC Mapping Object</label>
    <nameField>
        <label>Country Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NGCC Mapping Objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Unassigned_Queue_Name__c</columns>
        <columns>Inactive_Queue_Name__c</columns>
        <columns>Language__c</columns>
        <columns>LDR_User__c</columns>
        <columns>Alias_Country_Email_Id__c</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_Call_Center_Mapping</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Cisco_Contact_Center_Manager1__c</columns>
        <columns>Cisco_Contact_Center_Manager2__c</columns>
        <columns>Lead_Admin__c</columns>
        <columns>Lead_Admin_Email__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NGCC_Mapping_Object__c.Call_Center</value>
        </filters>
        <label>All Call Center Mapping</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Mapping_APJ</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Sub_Theater__c</columns>
        <columns>Language__c</columns>
        <columns>LDR_User__c</columns>
        <columns>Unassigned_Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NGCC_Mapping_Object__c.Country_Mapping</value>
        </filters>
        <filters>
            <field>Theater__c</field>
            <operation>equals</operation>
            <value>APJ</value>
        </filters>
        <label>Country Mapping-APJ</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Mapping_Americas</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Language__c</columns>
        <columns>LDR_User__c</columns>
        <columns>Lead_Admin_Email__c</columns>
        <columns>Unassigned_Queue_Name__c</columns>
        <columns>Inactive_Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NGCC_Mapping_Object__c.Country_Mapping</value>
        </filters>
        <filters>
            <field>Theater__c</field>
            <operation>equals</operation>
            <value>Americas</value>
        </filters>
        <label>Country Mapping-Americas</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Mapping_EMEAR</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Sub_Theater__c</columns>
        <columns>Language__c</columns>
        <columns>LDR_User__c</columns>
        <columns>Unassigned_Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NGCC_Mapping_Object__c.Country_Mapping</value>
        </filters>
        <filters>
            <field>Theater__c</field>
            <operation>equals</operation>
            <value>EMEAR</value>
        </filters>
        <label>Country Mapping-EMEAR</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Country_Mapping_Greater_China</fullName>
        <columns>NAME</columns>
        <columns>Theater__c</columns>
        <columns>Sub_Theater__c</columns>
        <columns>Language__c</columns>
        <columns>LDR_User__c</columns>
        <columns>Unassigned_Queue_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>NGCC_Mapping_Object__c.Country_Mapping</value>
        </filters>
        <filters>
            <field>Theater__c</field>
            <operation>equals</operation>
            <value>Greater China</value>
        </filters>
        <label>Country Mapping-Greater China</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>Call_Center</fullName>
        <active>true</active>
        <label>Call Center</label>
    </recordTypes>
    <recordTypes>
        <fullName>Country_Mapping</fullName>
        <active>true</active>
        <label>Country Mapping</label>
    </recordTypes>
</CustomObject>